# COS3711

./: README.md
Book/: Book.pro  book.cpp  book.h  bookinput.cpp  bookinput.h  main.cpp
CD_information/: CD_information.pro  cd_information.cpp  rowcolourdelegate.cpp
COS3711 2024 Assignment 1/2024/Question 1/Software_Reviews/: CMakeLists.txt  main.cpp  softwareviews.cpp  softwareviews.h  window.cpp  window.h
COS3711 2024 Assignment 1/2024/Question 2/Software_Reviews Extend/: CMakeLists.txt  displaywindow.cpp  displaywindow.h  main.cpp  softwareviews.cpp  softwareviews.h  window.cpp  window.h
COS3711 2024 Assignment 1/2024/Question 3/Music/: CMakeLists.txt  cd.cpp  cd.h  main.cpp  progressbardelegate.cpp  progressbardelegate.h  window.cpp  window.h
COS3711 2024 Assignment 1/2024/Question 4/: file.txt
COS3711 2024 Assignment 1/2024/Question 4/Highlighter QSyntaxHighlighter/: CMakeLists.txt  filereader.cpp  filereader.h  highlighter.cpp  window.cpp  window.h
COS3711 2024 Assignment 1/2024/Question 4/Highlighter QTextDocument QTextCursor/: CMakeLists.txt  highlighter.h  main.cpp  phonenumbersandemailshighlighter.cpp  phonenumbersandemailshighlighter.h  window.cpp  window.h
COS3711 2024 Assignment 2/ConferenceRegistration/: CMakeLists.txt  Desktopregistration.xml  filereader.cpp  filereader.h  filewriter.cpp  filewriter.h  guestsregistration.cpp  guestsregistration.h  main.cpp  mainwindow.cpp  mainwindow.h  person.cpp  person.h  registration.cpp  registration.h  registrationfactory.cpp  registrationfactory.h  registrationlist.cpp  registrationlist.h  registrationlistreader.cpp  registrationlistreader.h  registrationlistwriter.cpp  registrationlistwriter.h  resource.qrc  studentregistration.cpp  studentregistration.h  tablemodel.cpp  tablemodel.h
COS3711 2024 Assignment 2/ConferenceRegistration/files/: MacOS.qss
COS3711 2024 Assignment 3/Books/: CMakeLists.txt  book.cpp  book.h  bookinput.cpp  bookinput.h  bookwriter.cpp  bookwriter.h  main.cpp
COS3711 2024 Assignment 3/PasswordValidator/: CMakeLists.txt  widget.cpp  widget.h
COS3711 2024 Assignment 3/PrimeFinder/: CMakeLists.txt  main.cpp  primefinder.cpp  primefinder.h  resource.qrc  widget.cpp  widget.h
COS3711 2024 Assignment 3/PrimeFinder/files/: MacOS.qss  W11.qss
COS3711 2024 Assignment 3/Q2 Books/: CMakeLists.txt  book.cpp  book.h  bookinput.cpp  bookwriter.cpp  bookwriter.h
Inventory/: Inventory.pro  inventory.cpp  inventory.h  main.cpp
Singleton/: Singleton.pro  factorymethod.cpp  factorymethod.h  main.cpp  singleton.cpp  singleton.h
calculator/: calculator.h
journal/: mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
vehicle/: main.cpp  passengervehicle.cpp  passengervehicle.h  transportvehicle.cpp  transportvehicle.h  vehicle.cpp  vehicle.h  vehicle.pro  vehiclelist.cpp  vehiclelist.h
